# omnifocus-mcp

./: .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  FIXTURE_REFACTORING_STATUS.md  LICENSE  Makefile  README.md  SECURITY.md  claude_desktop_config.example.json  omnifocus_client.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  server.py  test_integration.py  test_omnifocus_client.py  test_server.py
.claude/: CLAUDE-redesign-phase.md  CLAUDE.md  METRICS.md  MISTAKES.md  automation-candidates.md  settings.json  v0.6.3-implementation-plan.md
.claude/archive/: AUDIT_ACTION_ITEMS.md  DIRECTORY_AUDIT_REPORT.md  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: API_REDESIGN_PLAN.md  API_REFERENCE.md  APPLESCRIPT_GOTCHAS.md  ARCHITECTURE.md  CODE_QUALITY.md  CONTRIBUTING.md  IMPLEMENTATION_EXAMPLES.md  INTEGRATION_TESTING.md  MCP_ROADMAP.md  MIGRATION_v0.5.md  MIGRATION_v0.6.md  PLUGIN_MIGRATION.md  README.md  README_DOCS.md  ROADMAP.md  SCHEMA_CHANGES_VISUAL.md  SCHEMA_REVIEW_SUMMARY.md  TESTING.md  THIRD_ANALYSIS_HONEST_ASSESSMENT.md  USE_CASES.md  VALIDATION_SPRINT_COMPLETE.md  attachment-api-research.md  jxa-attachment-module-design.md  mcp-unified-interface.md  omnifocus-4.8.4-documentation.html  omnifocus-mcp-gap-analysis.md
examples/: claude_desktop_config.example.json
scripts/: README.md  analyze_tool_docs.py  approve_hygiene_checks.sh  check_applescript_safety.sh  check_changelog_date.sh  check_client_server_parity.sh  check_code_quality.sh  check_complexity.sh  check_dependencies.sh  check_directory_organization.sh  check_documentation.sh  check_monitoring_deadlines.sh  check_pending_releases.sh  check_readme_claims.sh  check_recurrence.sh  check_roadmap_sync.sh  check_test_count_sync.sh  check_test_coverage.sh  check_version_sync.sh  cleanup_comprehensive_test_data.sh  cleanup_test_data.sh  create_tag.sh  install-git-hooks.sh  log_mistake.sh  migrate_mistakes_to_issues.sh  research_focus_commands.sh  run_all_tests.sh  run_integration_tests.sh  setup_benchmark_data.sh  setup_clean_test_database.sh  setup_comprehensive_test_data.sh  setup_github_labels.sh  setup_test_database.sh  sync_version.sh  test_prevention_measures.sh  update_metrics.sh  update_mistake_status.sh  verify_prevention.sh
tests/: conftest.py  test_api_redesign_create.py  test_api_redesign_delete.py  test_api_redesign_get_projects.py  test_api_redesign_get_tasks.py  test_api_redesign_update.py  test_api_redesign_update_project.py  test_api_redesign_update_projects.py  test_applescript_syntax.py  test_batch_operations.py  test_benchmark.py  test_boolean_tag_logic.py  test_check_documentation.py  test_claude_code_hooks.py  test_conditional_filter_optimization.py  test_conditional_project_filters.py  test_create_tag.py  test_date_range_filtering.py  test_delete_tags.py  test_e2e_real.py  test_error_sanitization.py  test_get_projects_helpers.py  test_get_subtasks.py  test_get_tasks_helpers.py  test_git_hooks.py  test_hooks.sh  test_hygiene_scripts.py  test_integration.py  test_integration_performance.py  test_integration_real.py  test_js_string_escaper.py  test_manual_query.py  test_omniautomation_test_mode.py  test_omnifocus_client.py  test_omnifocus_client_next_field.py  test_omnifocus_client_on_hold.py  test_performance_timing.py  test_pre_tag_version_detection.sh  test_prod_integration.py  test_profile_performance.py  (+34 more)
(+146 files in other folders)
