[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnifocus-mcp"
version = "0.6.2"
description = "MCP server for OmniFocus integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "radon>=6.0.0",
]

[project.scripts]
omnifocus-mcp = "omnifocus_mcp.server_fastmcp:mcp.run"
