[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnifocus-mcp"
version = "0.7.1"
description = "MCP server for OmniFocus integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "radon>=6.0.0",
]

[project.scripts]
omnifocus-mcp = "omnifocus_mcp.server_fastmcp:mcp.run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: mark test as an async test",
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv"]
pythonVersion = "3.13"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportCallIssue = false
reportArgumentType = false
reportIndexIssue = false
reportAttributeAccessIssue = false
venvPath = "."
venv = "venv"
